AI_development_environments/x86/ai_toolkit_elyra/kompose/elyra-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: elyra
  name: elyra
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: elyra
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/jupyter: "true"
        io.kompose.service: elyra
    spec:
      containers:
        - args:
            - jupyter
            - lab
            - --debug
          image: elyra/elyra:dev
          name: elyra
          ports:
            - containerPort: 8888
          resources: {}
          volumeMounts:
            - mountPath: /home/jovyan/work
              name: elyra-claim0
            - mountPath: /home/jovyan/work/data
              name: elyra-claim1
      restartPolicy: Always
      volumes:
        - name: elyra-claim0
          persistentVolumeClaim:
            claimName: elyra-claim0
        - name: elyra-claim1
          persistentVolumeClaim:
            claimName: elyra-claim1
status: {}
