AI_development_environments/x86/ai_toolkit_elyra/kompose/mlflowui-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: mlflowui
  name: mlflowui
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: mlflowui
status:
  loadBalancer: {}
