AI_development_environments/x86/ai_toolkit_elyra/kompose/jupyter-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: jupyter
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/jupyter: "true"
  podSelector:
    matchLabels:
      io.kompose.network/jupyter: "true"
